adding new files

--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tech4girls cohort 3</title>
+    <title>homework1</title>
 </head>
-<h1>lesson 4</h1>
-
-<body>
-    <p>learning the use and application of vs code 
-        as well as git and github. This has given me the opportunity to learn code and to also gain knowledge required f-</p>   
+<body><h1>Working with github continuation</h1>
+<p1>we learnt to make repositories and connecting the remote repository to the local repository. To do this you;
+    <br>1.A new terminal in your code editor
+    <br>2.Type cd space the name of the folder you're working with 
+    <br>3.Go to github, create a remote repository for the folder
+    <br>4.From github copy and paste the first line in the listed links
+    <br>5.Paste this link into the code editorand click enter
+    <br>6.In descending order copy and paste from github into the code editor
+    <br>7.After the last link is pasted and entered, type git space add space "." then enter. This adds all files within the folder
+    <br>8.Next type git space commit space -m space "your comment"
+    <br>9.Finally type git space push. This ensures that everything is linked.
+     
+</p1>     
 </body>
 </html>
