commiting all changes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <br>8.Next type git space commit space -m space "your comment"
     <br>9.Finally type git space push. This ensures that everything is linked.
      
-</p1>     
+</p1> 
+<script src="src/index.js"></script>    
 </body>
 </html>
